[project]
name = "cv-dataset-advisor"
version = "0.1.0"
description = "Computer Vision Dataset Advisor + Label QA Agent MVP"
dependencies = [
    "google-adk==2.3.0",
    "google-generativeai>=0.8.6",
    "imagehash>=4.3.2",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
lint = [
    "pylint>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
